--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
-    "nodemon": "^2.0.15",
     "postman-request": "^2.88.1-postman.30",
     "request": "^2.88.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
   "scripts": {
-    "start":"node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC"
